Fixed travis config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t rodoljub-radivojevic/docker_react -f Dockerfile.dev .
+  - docker build -t rodoljubradivojevic/docker_react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true rodoljub-radivojevic/docker-react npm run test
+  - docker run -e CI=true rodoljub radivojevic/docker-react npm run test
