--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 before_install:
-  - docker build -t rodoljubradivojevic/docker_react:v1 -f Dockerfile.dev .
-  - docker push rodoljubradivojevic/docker_react:v1
+  - docker build -t https://hub.docker.com/repository/docker/rodoljubradivojevic/docker_react:v2 -f Dockerfile.dev .
+  - docker push https://hub.docker.com/repository/docker/rodoljubradivojevic/docker_react:v2
 
 script:
   - docker run -e CI=true rodoljubradivojevic/docker-react npm run test
