--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t https://hub.docker.com/repository/docker/rodoljubradivojevic/docker_react:v2 -f Dockerfile.dev .
-  - docker push https://hub.docker.com/repository/docker/rodoljubradivojevic/docker_react:v2
+  - docker build -t rodoljubradivojevic/docker_react:v3 -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true rodoljubradivojevic/docker-react npm run test
+  - docker run -e CI=true rodoljubradivojevic/docker-react:v3 npm run test
